@@ -6,16 +6,16 @@ package com.org.expriments.threads;
  */
 public class MultiThreadDemo extends Thread
 {
-    @Override
-    public void run()
-    {
-        try
-        {
-            System.out.println("Current Thread: " + Thread.currentThread().getId() + " is running");
-        }
-        catch (Exception e)
-        {
-            System.out.println("Exception occured");
-        }
-    }
+	@Override
+	public void run()
+	{
+		try
+		{
+			System.out.println("Current Thread: " + Thread.currentThread().threadId() + " is running");
+		}
+		catch(Exception e)
+		{
+			System.out.println("Exception occured");
+		}
+	}
 }
